# Spud-Engine-2

./: .gitattributes  CMakeLists.txt  Icon.icns  README.md  Spud-Engine-2-Info.plist.in
Bullet/include/BulletCollision/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Bullet/include/BulletDynamics/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Bullet/include/BulletInverseDynamics/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Bullet/include/BulletSoftBody/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Bullet/include/LinearMath/: CTestTestfile.cmake  Makefile  cmake_install.cmake
OpenAL/lib/: libopenal.1.dylib
PhysX/include/foundation/: PxTransform.h
Resources/: test.txt
Resources/Font/Arial.font/: atlas.dds  font.fnt
Resources/Level/: out.slevel  test.slevel
Resources/Material/: AK.mat  blank.mat  cerberus.mat  concrete_material_test.mat  cubes.mat  floor.mat  graybox.mat  house_main.mat  house_window.mat  house_window_secondary.mat  kirov.mat  machine_material_test.mat  metal_material_test.mat  physics_test.mat  plane.mat  shapes.mat  spheres.mat  test.mat  wall.mat
Resources/Material/material_test/: bricks.mat  copper.mat  gold.mat  gray.mat  plastic.mat  silver.mat  stone.mat
Resources/Material/sponza/: arch.mat  background.mat  bricks.mat  ceiling.mat  columna.mat  columnb.mat  columnc.mat  details.mat  fabrica.mat  fabricb.mat  fabricd.mat  fabrice.mat  fabricf.mat  fabricg.mat  flagpole.mat  floor.mat  leaf.mat  lion.mat  roof.mat  vase.mat  vase_hanging.mat  vase_plant.mat  vase_round.mat
Resources/Mesh/: barrel.mesh  cornell_box.mesh  cube.mesh  kirov.mesh  machine.mesh  metal.mesh  plane.mesh  plastic.mesh  sphere.mesh  sub.mesh  tank.mesh
Resources/Model/: Kirov.smdl  ak.smdl  ak.srig  ak_reload.sanim  barrel.smdl  bed.smdl  cave.smdl  cerberus.smdl  collada.smdl  cornell_box.smdl  cruiser.smdl  cube.smdl  cubes.smdl  floor.smdl  graybox.smdl  house.smdl  kirov.smdl  material_test.smdl  material_test1.smdl  model.smdl  physics_test.smdl  physics_test1.smdl  physics_test1.srig  plane.smdl  shapes.smdl  sphere.smdl  spheres.smdl  susan.smdl  wall.smdl
Resources/Shader/: PBR.frag  Simple.frag  Simple.vert  ambient_occlusion.frag  deferred_lighting.frag  gbuffer.frag  simple.frag
Resources/Shader/ambient_occlusion/: ambient_occlusion.frag  blend.frag  blur.frag
Resources/Shader/gbuffer/: gbuffer.frag  gbuffer_skinned.vert
Resources/Shader/lighting/: deferred_lighting.frag  deferred_lighting.vert  deferred_reflections.frag  shadow.frag  varience_shadow.vert
Resources/Shader/master/: skinned.master
Resources/Shader/simple/: simple_color.frag  simple_color.vert
Resources/Shader/test/: shader_static.vert  static.master
Resources/Shader/ui/: tex_simple.frag  text_simple.frag
Resources/Texture/AK/: AK_albedo.dds  AK_normal.dds  AK_orm.dds
Resources/Texture/blank/: blank_albedo.dds  blank_normal.dds  blank_orm.dds  graybox_albedo.dds
Resources/Texture/floor/: floor_albedo.dds  floor_normal.dds  floor_orm.dds
Resources/Texture/house/: house_window_albedo.dds  house_window_normal.dds  house_window_orm.dds  house_window_secondary_albedo.dds  house_window_secondary_normal.dds  house_window_secondary_orm.dds
Resources/Texture/material_tests/: gray_albedo.dds  gray_normal.dds  gray_orm.dds
Resources/Texture/physics_test/: physics_test_albedo.dds  physics_test_normal.dds  physics_test_orm.dds
Resources/Texture/spheres/: spheres_albedo.dds  spheres_normal.dds  spheres_orm.dds
Resources/Texture/wall/: wall_albedo.dds  wall_normal.dds  wall_orm.dds
Spud Engine 2/: AppDelegate.h  AppDelegate.m  Info.plist  SActor.cpp  SActor.hpp  SAmbientOcclusionPass.cpp  SAmbientOcclusionPass.hpp  SBoundingBox.cpp  SBoundingBox.hpp  SCamera.cpp  SCamera.hpp  SCharacterController.cpp  SCharacterController.hpp  SComponent.cpp  SComponent.hpp  SConsole.cpp  SConsole.hpp  SCubeMap.cpp  SCubeMap.hpp  SCursor.cpp  SCursor.hpp  SDeferredRenderingPipeline.cpp  SDeferredRenderingPipeline.hpp  SEventSystem.cpp  SEventSystem.hpp  SEvents.h  SEvents.hpp  SFileSystem.cpp  SFileSystem.hpp  SFont.cpp  SFont.hpp  SFramebuffer.cpp  SFramebuffer.hpp  SGL.cpp  SGL.hpp  SGLUpload.cpp  SGbufferShader.cpp  SGbufferShader.hpp  SHotLoadSystem.cpp  SHotLoadSystem.hpp  (+78 more)
Spud Engine 2.xcodeproj/: project.pbxproj
Spud Engine 2.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Spud Engine 2/Base.lproj/: MainMenu.xib  SGLUpload.hpp
Spud Model Converter.xcodeproj/: project.pbxproj
Spud Model Converter.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/: SMainLoop.cpp  SMainLoop.hpp  driver.hpp  main.cpp
src/Debug/: SLog.cpp  SLog.hpp
src/Engine/: SSubsystem.hpp
src/Engine/Utility/: SClass.hpp  SHash.cpp  SHash.hpp  SStaticConstructor.hpp  STime.cpp  STime.hpp
src/Event/: SEventSystem.cpp  SEventSystem.hpp  SEvents.h
src/Event/Input/: SInputSystem.cpp  SInputSystem.hpp
src/File/: SFileSystem.cpp  SFileSystem.hpp
src/Level/: SLevel.cpp  SLevel.hpp  SLevelFactory.cpp  SLevelFactory.hpp  SOctreeLightGraph.cpp  SOctreeLightGraph.hpp  SOctreeSceneGraph.cpp  SOctreeSceneGraph.hpp  SSerialization.cpp  SSerialization.hpp
src/Level/Octree/: SOctree.cpp  SOctree.hpp
src/Physics/: SCharacterController.cpp  SCharacterController.hpp  SPhysicsSystem.cpp  SPhysicsSystem.hpp  SRigidBody.cpp  SRigidBody.hpp
src/Rendering/: SGL.cpp  SGL.hpp  SRenderSystem.cpp  SRenderSystem.hpp
src/Rendering/Level/: SSceneGraph.cpp  SSceneGraph.hpp
src/Rendering/Light/: SDeferredTileController.cpp  SDeferredTileController.hpp  SLight.cpp  SLight.hpp  SLightGraph.cpp  SLightGraph.hpp  SLightingConstants.h
src/Rendering/Objects/: SObject.cpp  SObject.hpp
src/Rendering/Pipeline/: SFramebuffer.cpp  SFramebuffer.hpp  SRenderingPipeline.cpp  SRenderingPipeline.hpp
src/Rendering/Scene Graph/: SSceneGraph.cpp  SSceneGraph.hpp
src/Resource/: SGLUpload.hpp  SHotLoadSystem.cpp  SResourceManager.cpp  SResourceManager.hpp
src/Sound/: SSoundEmitter.cpp  SSoundEmitter.hpp  SSoundSystem.cpp  SSoundSystem.hpp
src/UI/: SUI.cpp  SUI.hpp
(+127 files in other folders)
